Minor cleanup that didn't make it into previous commit, also fix map div so it will show up for users on IE7

--- a/comps/css/app.css
+++ b/comps/css/app.css
@@ -487,7 +487,7 @@ background-image: url(../img/pin-2-ie.png);
 #map {
 position: absolute;
 top: 0;
-bottom: 0;
 right: 0;
 width: 561px;
+height: 563px;
 }
